--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API that records browser interactions using Playwright and FFmpeg",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "postinstall": "npx playwright install --with-deps"
   },
   "dependencies": {
     "express": "^4.18.2",
